feat(auth): complete authentication module frontend and backend